fix layout issue on transaction step3

--- a/app/assets/stylesheets/custom_build.sass
+++ b/app/assets/stylesheets/custom_build.sass
@@ -1,5 +1,5 @@
 .margin-ex-lg-top
-  margin-top: 32px
+  margin-top: 35px
 
 .margin-lg-top
   margin-top: 20px
